PORN-37: Fixed rating alignment

--- a/Project-Omni-Ride-Network/wwwroot/css/style.css
+++ b/Project-Omni-Ride-Network/wwwroot/css/style.css
@@ -831,6 +831,7 @@ select.loginpage option {
 	
 	float:left;
 	width:15%;
+	margin-top:20px;
 }
 
 #rating .right {
